--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "howler": "^2.2.3",
     "http-proxy-middleware": "^1.0.5",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
